# rdo-infra-playbooks

./: .ansible-lint  .gitignore  .gitmodules  .gitreview  .zuul.yaml  README.md  README.rst  ansible-role-requirements.yml  ansible-role-requirements_external.yml  ansible.cfg  config.vault.yml  config.yml  doc-requirements.txt  groups  hosts  hosts.yml  project.config  registry-requirements.yml  requirements.yml  setup.cfg  test-requirements.txt  tox.ini
.zuul.d/: zuul.yaml
contrib/: 0003-Add-proxy-cache-for-PyPI.patch  0004-Serve-pypi-proxy-cache-from-port-80.patch  0004-Surround-substitute-with-inflate-deflate.patch  prune_logserver.sh  prune_tripleo_images.sh  ssh_config  styles.css
defaults/: main.yml
group_vars/: OSEv3.yml  all.yml  review.yml
handlers/: main.yml
meta/: main.yml
playbooks/: backup-server.yml  base.yml  cico-agent.yml  cico-slave.yml  distribute_certificates.yml  dlrn-replicated-db.yml  images.yml  inventory.yaml  logserver.yml  mail.yml  rcm-registry-cert.yml  rcm-registry.yml  rcm-share.yml  rdo-registry.yml  registry-host-preparation.yml  registry-project-creation.yml  registry-renew-certificates.yml  sensu-client.yml  sensu-rdo-bot.yml  sensu-rdobot.yml  sensu-server.yml  setup_client.yml  setup_master.yml  sfproject.yaml  web.yml
rdorepro/: .gitignore  (+6 more)
roles/rdo-infra/bot/: .gitreview  README.rst  setup.cfg
roles/rdo-infra/bot/defaults/: main.yml
roles/rdo-infra/bot/meta/: main.yml
roles/rdo-infra/bot/tasks/: main.yml  packages.yml  setup.yml
roles/rdo-infra/bot/templates/: config.py.j2  rdobot.service.j2  rdobot.sh.j2
(+247 files in other folders)
