[metadata]
name = ansible-role-rdo-bot
Summarr = An ansible role to install and setup rdobot
author = RDO-infra
author-email = dmsimard@redhat.com
home-page = https://github.com/rdo-infra/ansible-role-base
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
